Updated name in index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <div>
-        Hello World from Mudassar Hanif.
+        Hello World from Muhammad Burhan Mudassar.
     </div>
 </body>
 </html>
